# superadmin

./: index.html  package-lock.json  package.json
.github/workflows/: beta-build.yaml  build-tauri-app.yml  production-release.yml
src/: main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Button.jsx  ContentPage.jsx  Header.jsx  ItemCard.jsx
src/contexts/: CacheContext.jsx  MobileContext.jsx  RefreshContext.jsx
src/modals/: AddNewAdmin.jsx  AddNewStaff.jsx  EditAdmin.jsx  EditStaff.jsx  RestrictAdmin.jsx  RestrictStaff.jsx
src/pages/: AuthReturn.jsx  Bugs.jsx  Configure.jsx  Dashboard.jsx  Profile.jsx  SignIn.jsx  SystemVitals.jsx  Unauthorized.jsx
src/styles/: SignIn.css  index.css
src/styles/components/: Header.css
src/styles/pages/: Dashboard.css  SignIn.css
src/utils/: authFetch.js  remToPx.js  rootToPx.js  supabaseClient.js  tauriFetch.js
